chore: using 'voila' for web dashboards

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-plotly==5.19.0
-numpy==1.26.4
-pandas==2.2.1
-web3==6.15.1
-ipykernel==6.29.3
+voila==0.5.0
+voila-topbar==0.1.1
+ipykernel
+pandas
+jupyterlab-fasta
+plotly
+numpy
+web3
 nbformat>=4.2.0
