[chore] remove voila and generate flask api

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-voila==0.5.0
-voila-topbar==0.1.1
 ipykernel
 pandas
-jupyterlab-fasta
 plotly
 numpy
 web3
 nbformat>=4.2.0
+Flask==2.3.2
+flask-swagger-ui==4.11.1
